--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,9 @@
                 <div class="col-md-3">
                     <a href="/listTodos" target="_blank" class="btn btn-primary btn-lg btn-block">View Todos</a>
                 </div>
+                <div class="col-md-3">
+                    <a href="/listBlogs/{{current_user.id}}" target="_blank" class="btn btn-primary btn-lg btn-block">List Blogs</a>
+                </div>
             </div>
         </div>
 
