--- a/templates/login.html
+++ b/templates/login.html
@@ -14,15 +14,15 @@
             <!-- username and password with button -->
             <div class="form-group">
                 <label class="font-weight-bold" for="username">Username</label>
-                <input type="text" class="form-control" id="username" name="username" required placeholder="Enter username">
+                <input type="text" class="form-control" id="login_username" name="username" required placeholder="Enter username">
             </div>
         
             <div class="form-group">
                 <label class="font-weight-bold" for="password">Password</label>
-                <input type="password" class="form-control" id="password" name="password" required placeholder="Enter password">
+                <input type="password" class="form-control" id="login_password" name="password" required placeholder="Enter password">
             </div>
 
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" id="login_button" class="btn btn-primary">Login</button>
 
 
     </form>
