--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center" onclick="window.open('/home', '_self')">A Fullstack To-do app by Bharath</h1>            
+                <h1 class="text-center" onclick="window.open('/home', '_self')">A Fullstack Blog app by Bharath</h1>            
             </div>
         </div>
 
